Fix alert z-index

--- a/administrator/templates/atum/css/template.css
+++ b/administrator/templates/atum/css/template.css
@@ -242,7 +242,7 @@ small,
   position: fixed;
   top: 15px;
   left: 50%;
-  z-index: 1031;
+  z-index: 1080;
   margin-left: 125px;
   transition: all .5s ease;
   -webkit-transform: translateX(-50%);
